@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-07T16:29:11Z",
-  "count_outdated" : 714,
-  "uniques_outdated" : 372,
-  "count" : 747,
+  "timestamp" : "2022-08-08T02:05:28Z",
+  "count_outdated" : 716,
+  "uniques_outdated" : 373,
+  "count" : 748,
   "uniques" : 389,
   "clones" : [
-    {
-      "timestamp": "2022-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 2,
